# ChangeLog for sci-libs/minc-toolkit
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Jun 2015; Horea Christian <h.chr@mail.ru> minc-toolkit-9999.ebuild:
  relocated dep

  18 Jun 2015; Horea Christian <h.chr@mail.ru> minc-toolkit-9999.ebuild:
  fixed dep

  18 Jun 2015; Horea Christian <h.chr@mail.ru> minc-toolkit-9999.ebuild:
  fixed deps

*minc-toolkit-9999 (18 Jun 2015)

  18 Jun 2015; Horea Christian <h.chr@mail.ru> +metadata.xml,
  +minc-toolkit-9999.ebuild:
  new alternative MINC distribution