@@ -3,6 +3,9 @@
 # $Header: $
 
   18 Jun 2015; Horea Christian <h.chr@mail.ru> minc-toolkit-9999.ebuild:
+  using system cdf5
+
+  18 Jun 2015; Horea Christian <h.chr@mail.ru> minc-toolkit-9999.ebuild:
   relocated dep
 
   18 Jun 2015; Horea Christian <h.chr@mail.ru> minc-toolkit-9999.ebuild:
